--- a/Wire Antennas/051_Broadband_80m_Antennas_Part_2.ipynb
+++ b/Wire Antennas/051_Broadband_80m_Antennas_Part_2.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "The problem will be set up as a multi-objective optimization problem, which should provide us with a range of tradeoffs between our two objectives, **minimize maximum VSWR within the band** and **minimize total wire used**.\n",
     "\n",
-    "This may be overkill for this simple project but...I like overkill.\n",
+    "Saving a bit of wire might not be at the head of anyone's list of concerns...anyway, it provides an example of a simulation that requires the user to choose a trade-off between two objectives...\n",
     "\n",
     "Thanks to the folks at the Pymoo project (\"Python Multi-objective Optimization\") for the underlying optimization code.\n",
     "\n",
@@ -65,7 +65,7 @@
     "# A reusable base class for problems similar to this one\n",
     "#\n",
     "# For each design it searches for the optimum series-section matching network to minimize max VSWR in the band of interest\n",
-    "# This is slow-ish but not a problem for a simple problem like this one...\n",
+    "# This is slow-ish but not a problem for a simple scenario like this one...\n",
     "# The notebook '041_Series_Match_Ludicrous_Mode.ipynb' shows how to do the scanning on a GPU if you're so inclined.\n",
     "#\n",
     "# You'll need to define the function _make_design() to 'draw' the geometry of your antenna based on the parameters\n",
@@ -172,56 +172,56 @@
       "==========================================================================================\n",
       "n_gen  |  n_eval  | n_nds  |     cv_min    |     cv_avg    |      eps      |   indicator  \n",
       "==========================================================================================\n",
-      "     1 |      200 |      8 |  0.000000E+00 |  3.9685619613 |             - |             -\n",
-      "     2 |      300 |      9 |  0.000000E+00 |  0.6775080243 |  0.0178965221 |         nadir\n",
-      "     3 |      400 |     13 |  0.000000E+00 |  0.2243952037 |  0.0160585021 |         nadir\n",
-      "     4 |      500 |     17 |  0.000000E+00 |  0.0294900797 |  0.0251622172 |         nadir\n",
-      "     5 |      600 |     23 |  0.000000E+00 |  0.000000E+00 |  0.0144331250 |             f\n",
-      "     6 |      700 |     24 |  0.000000E+00 |  0.000000E+00 |  0.0031367100 |             f\n",
-      "     7 |      800 |     29 |  0.000000E+00 |  0.000000E+00 |  0.0062420664 |             f\n",
-      "     8 |      900 |     32 |  0.000000E+00 |  0.000000E+00 |  0.0043988251 |             f\n",
-      "     9 |     1000 |     34 |  0.000000E+00 |  0.000000E+00 |  0.0066697819 |             f\n",
-      "    10 |     1100 |     40 |  0.000000E+00 |  0.000000E+00 |  0.0045661315 |             f\n",
-      "    11 |     1200 |     47 |  0.000000E+00 |  0.000000E+00 |  0.0027778229 |             f\n",
-      "    12 |     1300 |     47 |  0.000000E+00 |  0.000000E+00 |  0.0252985566 |         nadir\n",
-      "    13 |     1400 |     53 |  0.000000E+00 |  0.000000E+00 |  0.0034251070 |             f\n",
-      "    14 |     1500 |     57 |  0.000000E+00 |  0.000000E+00 |  0.0022245339 |             f\n",
-      "    15 |     1600 |     62 |  0.000000E+00 |  0.000000E+00 |  0.0033865314 |             f\n",
-      "    16 |     1700 |     75 |  0.000000E+00 |  0.000000E+00 |  0.0180113127 |         nadir\n",
-      "    17 |     1800 |     79 |  0.000000E+00 |  0.000000E+00 |  0.0033286501 |         ideal\n",
-      "    18 |     1900 |     84 |  0.000000E+00 |  0.000000E+00 |  0.0010321186 |             f\n",
-      "    19 |     2000 |     92 |  0.000000E+00 |  0.000000E+00 |  0.0019738263 |             f\n",
-      "    20 |     2100 |    101 |  0.000000E+00 |  0.000000E+00 |  0.0025461329 |             f\n",
-      "    21 |     2200 |    106 |  0.000000E+00 |  0.000000E+00 |  0.0004093104 |             f\n",
-      "    22 |     2300 |    112 |  0.000000E+00 |  0.000000E+00 |  0.0007095348 |             f\n",
-      "    23 |     2400 |    116 |  0.000000E+00 |  0.000000E+00 |  0.0012500657 |             f\n",
-      "    24 |     2500 |    122 |  0.000000E+00 |  0.000000E+00 |  0.0016636763 |             f\n",
-      "    25 |     2600 |    121 |  0.000000E+00 |  0.000000E+00 |  0.0018472820 |             f\n",
-      "    26 |     2700 |    128 |  0.000000E+00 |  0.000000E+00 |  0.0022350235 |             f\n",
-      "    27 |     2800 |    136 |  0.000000E+00 |  0.000000E+00 |  0.0052828388 |         ideal\n",
-      "    28 |     2900 |    144 |  0.000000E+00 |  0.000000E+00 |  0.0002825454 |             f\n",
-      "    29 |     3000 |    149 |  0.000000E+00 |  0.000000E+00 |  0.0266863985 |         nadir\n",
-      "    30 |     3100 |    157 |  0.000000E+00 |  0.000000E+00 |  0.0002595213 |             f\n",
-      "    31 |     3200 |    167 |  0.000000E+00 |  0.000000E+00 |  0.0149684411 |         ideal\n",
-      "    32 |     3300 |    169 |  0.000000E+00 |  0.000000E+00 |  0.0000745199 |             f\n",
-      "    33 |     3400 |    171 |  0.000000E+00 |  0.000000E+00 |  0.0001311150 |             f\n",
-      "    34 |     3500 |    177 |  0.000000E+00 |  0.000000E+00 |  0.0002545247 |             f\n",
-      "    35 |     3600 |    182 |  0.000000E+00 |  0.000000E+00 |  0.0003896545 |             f\n",
-      "    36 |     3700 |    189 |  0.000000E+00 |  0.000000E+00 |  0.0006521832 |             f\n",
-      "    37 |     3800 |    197 |  0.000000E+00 |  0.000000E+00 |  0.0007871390 |             f\n",
-      "    38 |     3900 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0008667681 |             f\n",
-      "    39 |     4000 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0009940276 |             f\n",
-      "    40 |     4100 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0011221192 |             f\n",
-      "    41 |     4200 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0012632878 |             f\n",
-      "    42 |     4300 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0015015200 |             f\n",
-      "    43 |     4400 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0015851673 |             f\n",
-      "    44 |     4500 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0017149103 |             f\n",
-      "    45 |     4600 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0018438311 |             f\n",
-      "    46 |     4700 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0018873674 |             f\n",
-      "    47 |     4800 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0019801857 |             f\n",
-      "    48 |     4900 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0022199517 |             f\n",
-      "    49 |     5000 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0024812202 |             f\n",
-      "    50 |     5100 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0025731265 |             f\n"
+      "     1 |      200 |      8 |  0.000000E+00 |  4.5653021484 |             - |             -\n",
+      "     2 |      300 |     12 |  0.000000E+00 |  0.9587283224 |  0.0293239689 |             f\n",
+      "     3 |      400 |     10 |  0.000000E+00 |  0.3131845042 |  0.0479278864 |             f\n",
+      "     4 |      500 |     13 |  0.000000E+00 |  0.0998754240 |  0.0431377270 |             f\n",
+      "     5 |      600 |     18 |  0.000000E+00 |  0.0051773550 |  0.0052204957 |         ideal\n",
+      "     6 |      700 |     16 |  0.000000E+00 |  0.000000E+00 |  0.0041918283 |         ideal\n",
+      "     7 |      800 |     19 |  0.000000E+00 |  0.000000E+00 |  0.0255826437 |         nadir\n",
+      "     8 |      900 |     22 |  0.000000E+00 |  0.000000E+00 |  0.0219319099 |             f\n",
+      "     9 |     1000 |     24 |  0.000000E+00 |  0.000000E+00 |  0.0018452997 |             f\n",
+      "    10 |     1100 |     30 |  0.000000E+00 |  0.000000E+00 |  0.0110788108 |             f\n",
+      "    11 |     1200 |     28 |  0.000000E+00 |  0.000000E+00 |  0.0100628441 |             f\n",
+      "    12 |     1300 |     32 |  0.000000E+00 |  0.000000E+00 |  0.0057558953 |             f\n",
+      "    13 |     1400 |     35 |  0.000000E+00 |  0.000000E+00 |  0.0058387522 |             f\n",
+      "    14 |     1500 |     43 |  0.000000E+00 |  0.000000E+00 |  0.0072940956 |             f\n",
+      "    15 |     1600 |     47 |  0.000000E+00 |  0.000000E+00 |  0.0027771060 |             f\n",
+      "    16 |     1700 |     49 |  0.000000E+00 |  0.000000E+00 |  0.0009939409 |             f\n",
+      "    17 |     1800 |     53 |  0.000000E+00 |  0.000000E+00 |  0.0017929117 |             f\n",
+      "    18 |     1900 |     56 |  0.000000E+00 |  0.000000E+00 |  0.0031311325 |             f\n",
+      "    19 |     2000 |     66 |  0.000000E+00 |  0.000000E+00 |  0.0014524712 |             f\n",
+      "    20 |     2100 |     70 |  0.000000E+00 |  0.000000E+00 |  0.0037585813 |             f\n",
+      "    21 |     2200 |     80 |  0.000000E+00 |  0.000000E+00 |  0.0743400452 |         nadir\n",
+      "    22 |     2300 |     80 |  0.000000E+00 |  0.000000E+00 |  0.000000E+00 |             f\n",
+      "    23 |     2400 |     86 |  0.000000E+00 |  0.000000E+00 |  0.0020126750 |             f\n",
+      "    24 |     2500 |     87 |  0.000000E+00 |  0.000000E+00 |  0.0021367806 |             f\n",
+      "    25 |     2600 |     93 |  0.000000E+00 |  0.000000E+00 |  0.0019570501 |             f\n",
+      "    26 |     2700 |     96 |  0.000000E+00 |  0.000000E+00 |  0.0023514295 |             f\n",
+      "    27 |     2800 |    101 |  0.000000E+00 |  0.000000E+00 |  0.0026449496 |             f\n",
+      "    28 |     2900 |    108 |  0.000000E+00 |  0.000000E+00 |  0.0192929925 |         ideal\n",
+      "    29 |     3000 |    114 |  0.000000E+00 |  0.000000E+00 |  0.0004955665 |             f\n",
+      "    30 |     3100 |    119 |  0.000000E+00 |  0.000000E+00 |  0.0011123431 |             f\n",
+      "    31 |     3200 |    121 |  0.000000E+00 |  0.000000E+00 |  0.0025692712 |             f\n",
+      "    32 |     3300 |    118 |  0.000000E+00 |  0.000000E+00 |  0.0004234521 |             f\n",
+      "    33 |     3400 |    129 |  0.000000E+00 |  0.000000E+00 |  0.0011004270 |             f\n",
+      "    34 |     3500 |    135 |  0.000000E+00 |  0.000000E+00 |  0.0016225315 |             f\n",
+      "    35 |     3600 |    142 |  0.000000E+00 |  0.000000E+00 |  0.0022766092 |             f\n",
+      "    36 |     3700 |    149 |  0.000000E+00 |  0.000000E+00 |  0.0024531141 |             f\n",
+      "    37 |     3800 |    158 |  0.000000E+00 |  0.000000E+00 |  0.0028125031 |             f\n",
+      "    38 |     3900 |    161 |  0.000000E+00 |  0.000000E+00 |  0.0002717818 |             f\n",
+      "    39 |     4000 |    165 |  0.000000E+00 |  0.000000E+00 |  0.0004667492 |             f\n",
+      "    40 |     4100 |    167 |  0.000000E+00 |  0.000000E+00 |  0.0006689577 |             f\n",
+      "    41 |     4200 |    176 |  0.000000E+00 |  0.000000E+00 |  0.0008194080 |             f\n",
+      "    42 |     4300 |    174 |  0.000000E+00 |  0.000000E+00 |  0.0037351719 |         ideal\n",
+      "    43 |     4400 |    178 |  0.000000E+00 |  0.000000E+00 |  0.0001790842 |             f\n",
+      "    44 |     4500 |    177 |  0.000000E+00 |  0.000000E+00 |  0.0004462435 |             f\n",
+      "    45 |     4600 |    180 |  0.000000E+00 |  0.000000E+00 |  0.0005657565 |             f\n",
+      "    46 |     4700 |    190 |  0.000000E+00 |  0.000000E+00 |  0.0008948371 |             f\n",
+      "    47 |     4800 |    196 |  0.000000E+00 |  0.000000E+00 |  0.0011556502 |             f\n",
+      "    48 |     4900 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0013537655 |             f\n",
+      "    49 |     5000 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0015930089 |             f\n",
+      "    50 |     5100 |    200 |  0.000000E+00 |  0.000000E+00 |  0.0017104063 |             f\n"
      ]
     }
    ],
