--- a/Wire Antennas/053_Open_Sleeve_Dipole_1.ipynb
+++ b/Wire Antennas/053_Open_Sleeve_Dipole_1.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -110,105 +110,105 @@
       "n_gen  |  n_eval  |     f_avg     |     f_min    \n",
       "=================================================\n",
       "     1 |      200 |           nan |           nan\n",
-      "     2 |      300 |  7.6006517768 |  1.4087188244\n",
-      "     3 |      400 |  3.8286018056 |  1.3418912888\n",
-      "     4 |      500 |  2.4017562759 |  1.3043797016\n",
-      "     5 |      600 |  2.0088392198 |  1.3043797016\n",
-      "     6 |      700 |  1.7599350232 |  1.2578529119\n",
-      "     7 |      800 |  1.6238976592 |  1.2578529119\n",
-      "     8 |      900 |  1.5119245303 |  1.2422909737\n",
-      "     9 |     1000 |  1.4341971976 |  1.2168397903\n",
-      "    10 |     1100 |  1.3813858801 |  1.2074615955\n",
-      "    11 |     1200 |  1.3438495630 |  1.2059471607\n",
-      "    12 |     1300 |  1.3132892603 |  1.2059471607\n",
-      "    13 |     1400 |  1.2943123049 |  1.2059471607\n",
-      "    14 |     1500 |  1.2744300139 |  1.2059471607\n",
-      "    15 |     1600 |  1.2575318444 |  1.2006597519\n",
-      "    16 |     1700 |  1.2434055763 |  1.2006597519\n",
-      "    17 |     1800 |  1.2323128271 |  1.1998317242\n",
-      "    18 |     1900 |  1.2239445859 |  1.1980533600\n",
-      "    19 |     2000 |  1.2174940705 |  1.1963803768\n",
-      "    20 |     2100 |  1.2125482297 |  1.1963803768\n",
-      "    21 |     2200 |  1.2094433612 |  1.1963803768\n",
-      "    22 |     2300 |  1.2070874292 |  1.1963803768\n",
-      "    23 |     2400 |  1.2056271881 |  1.1963803768\n",
-      "    24 |     2500 |  1.2041523963 |  1.1960271597\n",
-      "    25 |     2600 |  1.2030229914 |  1.1960271597\n",
-      "    26 |     2700 |  1.2017558897 |  1.1960271597\n",
-      "    27 |     2800 |  1.2005284870 |  1.1960271597\n",
-      "    28 |     2900 |  1.1996091187 |  1.1960271597\n",
-      "    29 |     3000 |  1.1990466154 |  1.1960271597\n",
-      "    30 |     3100 |  1.1986061770 |  1.1957561970\n",
-      "    31 |     3200 |  1.1983568496 |  1.1957561970\n",
-      "    32 |     3300 |  1.1980675381 |  1.1957561970\n",
-      "    33 |     3400 |  1.1978367817 |  1.1957561970\n",
-      "    34 |     3500 |  1.1976370138 |  1.1957561970\n",
-      "    35 |     3600 |  1.1974744445 |  1.1957561970\n",
-      "    36 |     3700 |  1.1973065943 |  1.1953887939\n",
-      "    37 |     3800 |  1.1971505678 |  1.1953887939\n",
-      "    38 |     3900 |  1.1969369453 |  1.1953887939\n",
-      "    39 |     4000 |  1.1967359531 |  1.1953887939\n",
-      "    40 |     4100 |  1.1965732729 |  1.1951750517\n",
-      "    41 |     4200 |  1.1964278185 |  1.1951750517\n",
-      "    42 |     4300 |  1.1963119322 |  1.1951750517\n",
-      "    43 |     4400 |  1.1962328815 |  1.1951750517\n",
-      "    44 |     4500 |  1.1961730951 |  1.1951750517\n",
-      "    45 |     4600 |  1.1960965222 |  1.1943867207\n",
-      "    46 |     4700 |  1.1960359734 |  1.1943867207\n",
-      "    47 |     4800 |  1.1959949225 |  1.1943867207\n",
-      "    48 |     4900 |  1.1959344399 |  1.1943867207\n",
-      "    49 |     5000 |  1.1958886713 |  1.1943867207\n",
-      "    50 |     5100 |  1.1958253461 |  1.1943867207\n",
-      "    51 |     5200 |  1.1957728291 |  1.1943867207\n",
-      "    52 |     5300 |  1.1957133037 |  1.1943867207\n",
-      "    53 |     5400 |  1.1956517011 |  1.1943867207\n",
-      "    54 |     5500 |  1.1955926657 |  1.1943867207\n",
-      "    55 |     5600 |  1.1955303192 |  1.1943867207\n",
-      "    56 |     5700 |  1.1954795736 |  1.1943867207\n",
-      "    57 |     5800 |  1.1954045832 |  1.1943213940\n",
-      "    58 |     5900 |  1.1953494924 |  1.1943213940\n",
-      "    59 |     6000 |  1.1953022671 |  1.1943213940\n",
-      "    60 |     6100 |  1.1952613753 |  1.1943213940\n",
-      "    61 |     6200 |  1.1952189881 |  1.1943213940\n",
-      "    62 |     6300 |  1.1951502442 |  1.1943213940\n",
-      "    63 |     6400 |  1.1950936800 |  1.1942731142\n",
-      "    64 |     6500 |  1.1950148934 |  1.1942731142\n",
-      "    65 |     6600 |  1.1949334949 |  1.1942731142\n",
-      "    66 |     6700 |  1.1948289675 |  1.1942731142\n",
-      "    67 |     6800 |  1.1947284967 |  1.1942731142\n",
-      "    68 |     6900 |  1.1946285373 |  1.1942731142\n",
-      "    69 |     7000 |  1.1945625812 |  1.1942731142\n",
-      "    70 |     7100 |  1.1945031625 |  1.1942731142\n",
-      "    71 |     7200 |  1.1944623011 |  1.1942731142\n",
-      "    72 |     7300 |  1.1944383717 |  1.1942731142\n",
-      "    73 |     7400 |  1.1944187701 |  1.1942731142\n",
-      "    74 |     7500 |  1.1944000012 |  1.1942731142\n",
-      "    75 |     7600 |  1.1943733269 |  1.1942731142\n",
-      "    76 |     7700 |  1.1943536294 |  1.1942731142\n",
-      "    77 |     7800 |  1.1943342638 |  1.1942731142\n",
-      "    78 |     7900 |  1.1943218052 |  1.1942731142\n",
-      "    79 |     8000 |  1.1943198282 |  1.1942731142\n",
-      "    80 |     8100 |  1.1943178058 |  1.1942731142\n",
-      "    81 |     8200 |  1.1943157136 |  1.1942731142\n",
-      "    82 |     8300 |  1.1943133545 |  1.1942731142\n",
-      "    83 |     8400 |  1.1943107998 |  1.1942731142\n",
-      "    84 |     8500 |  1.1943080276 |  1.1942698956\n",
-      "    85 |     8600 |  1.1943050987 |  1.1942698956\n",
-      "    86 |     8700 |  1.1943012142 |  1.1942698956\n",
-      "    87 |     8800 |  1.1942977399 |  1.1942685843\n",
-      "    88 |     8900 |  1.1942934793 |  1.1942685843\n",
-      "    89 |     9000 |  1.1942887455 |  1.1942529678\n",
-      "    90 |     9100 |  1.1942830461 |  1.1942493916\n",
-      "    91 |     9200 |  1.1942781574 |  1.1942493916\n",
-      "    92 |     9300 |  1.1942742437 |  1.1942493916\n",
-      "    93 |     9400 |  1.1942727995 |  1.1942493916\n",
-      "    94 |     9500 |  1.1942721868 |  1.1942493916\n",
-      "    95 |     9600 |  1.1942719471 |  1.1942493916\n",
-      "    96 |     9700 |  1.1942717075 |  1.1942493916\n",
-      "    97 |     9800 |  1.1942712831 |  1.1942439079\n",
-      "    98 |     9900 |  1.1942707705 |  1.1942417622\n",
-      "    99 |    10000 |  1.1942699194 |  1.1942396164\n",
-      "   100 |    10100 |  1.1942693621 |  1.1942396164\n"
+      "     2 |      300 |  8.3926959735 |  1.3483440876\n",
+      "     3 |      400 |  3.9882479465 |  1.3411788940\n",
+      "     4 |      500 |  2.3126839703 |  1.2832171917\n",
+      "     5 |      600 |  1.8695079434 |  1.2832171917\n",
+      "     6 |      700 |  1.6805149359 |  1.2615555525\n",
+      "     7 |      800 |  1.5575839031 |  1.2615555525\n",
+      "     8 |      900 |  1.4740490091 |  1.2328945398\n",
+      "     9 |     1000 |  1.4113732511 |  1.2235660553\n",
+      "    10 |     1100 |  1.3658172053 |  1.2225060463\n",
+      "    11 |     1200 |  1.3281187928 |  1.2190752029\n",
+      "    12 |     1300 |  1.3047825056 |  1.2190752029\n",
+      "    13 |     1400 |  1.2856372690 |  1.2175755501\n",
+      "    14 |     1500 |  1.2712376493 |  1.2138197422\n",
+      "    15 |     1600 |  1.2595555735 |  1.2137682438\n",
+      "    16 |     1700 |  1.2491933584 |  1.2058626413\n",
+      "    17 |     1800 |  1.2422596818 |  1.2057664394\n",
+      "    18 |     1900 |  1.2360861963 |  1.2038179636\n",
+      "    19 |     2000 |  1.2320409888 |  1.2038179636\n",
+      "    20 |     2100 |  1.2282436186 |  1.2038179636\n",
+      "    21 |     2200 |  1.2245511705 |  1.2038179636\n",
+      "    22 |     2300 |  1.2214663213 |  1.2032740116\n",
+      "    23 |     2400 |  1.2183923078 |  1.2003576756\n",
+      "    24 |     2500 |  1.2156652200 |  1.1949949265\n",
+      "    25 |     2600 |  1.2134498060 |  1.1949949265\n",
+      "    26 |     2700 |  1.2112984604 |  1.1948760748\n",
+      "    27 |     2800 |  1.2098347235 |  1.1948760748\n",
+      "    28 |     2900 |  1.2084086841 |  1.1948760748\n",
+      "    29 |     3000 |  1.2064273810 |  1.1944663525\n",
+      "    30 |     3100 |  1.2050200540 |  1.1944663525\n",
+      "    31 |     3200 |  1.2037699687 |  1.1944663525\n",
+      "    32 |     3300 |  1.2025186396 |  1.1944663525\n",
+      "    33 |     3400 |  1.2016035688 |  1.1944663525\n",
+      "    34 |     3500 |  1.2004417282 |  1.1944663525\n",
+      "    35 |     3600 |  1.1995954633 |  1.1944663525\n",
+      "    36 |     3700 |  1.1989307123 |  1.1944663525\n",
+      "    37 |     3800 |  1.1983099389 |  1.1944663525\n",
+      "    38 |     3900 |  1.1977828860 |  1.1943622828\n",
+      "    39 |     4000 |  1.1975427949 |  1.1943622828\n",
+      "    40 |     4100 |  1.1970268416 |  1.1943622828\n",
+      "    41 |     4200 |  1.1966291142 |  1.1943622828\n",
+      "    42 |     4300 |  1.1962895846 |  1.1943622828\n",
+      "    43 |     4400 |  1.1959596300 |  1.1943616867\n",
+      "    44 |     4500 |  1.1956896579 |  1.1943504810\n",
+      "    45 |     4600 |  1.1955178934 |  1.1943504810\n",
+      "    46 |     4700 |  1.1953351665 |  1.1943504810\n",
+      "    47 |     4800 |  1.1952286971 |  1.1943504810\n",
+      "    48 |     4900 |  1.1950751865 |  1.1943504810\n",
+      "    49 |     5000 |  1.1949788791 |  1.1942796707\n",
+      "    50 |     5100 |  1.1948614907 |  1.1942796707\n",
+      "    51 |     5200 |  1.1947635561 |  1.1942796707\n",
+      "    52 |     5300 |  1.1946879733 |  1.1942796707\n",
+      "    53 |     5400 |  1.1946360147 |  1.1942796707\n",
+      "    54 |     5500 |  1.1946018326 |  1.1942796707\n",
+      "    55 |     5600 |  1.1945724809 |  1.1942796707\n",
+      "    56 |     5700 |  1.1945469707 |  1.1942796707\n",
+      "    57 |     5800 |  1.1945301992 |  1.1942796707\n",
+      "    58 |     5900 |  1.1945093489 |  1.1942796707\n",
+      "    59 |     6000 |  1.1944954133 |  1.1942796707\n",
+      "    60 |     6100 |  1.1944798368 |  1.1942796707\n",
+      "    61 |     6200 |  1.1944723606 |  1.1942796707\n",
+      "    62 |     6300 |  1.1944639397 |  1.1942796707\n",
+      "    63 |     6400 |  1.1944542909 |  1.1942796707\n",
+      "    64 |     6500 |  1.1944477445 |  1.1942796707\n",
+      "    65 |     6600 |  1.1944372123 |  1.1942577362\n",
+      "    66 |     6700 |  1.1944319379 |  1.1942577362\n",
+      "    67 |     6800 |  1.1944241256 |  1.1942577362\n",
+      "    68 |     6900 |  1.1944147474 |  1.1942577362\n",
+      "    69 |     7000 |  1.1944088274 |  1.1942577362\n",
+      "    70 |     7100 |  1.1944017267 |  1.1942577362\n",
+      "    71 |     7200 |  1.1943958354 |  1.1942577362\n",
+      "    72 |     7300 |  1.1943869013 |  1.1942577362\n",
+      "    73 |     7400 |  1.1943774062 |  1.1942543983\n",
+      "    74 |     7500 |  1.1943664277 |  1.1941895485\n",
+      "    75 |     7600 |  1.1943563384 |  1.1941895485\n",
+      "    76 |     7700 |  1.1943453693 |  1.1941895485\n",
+      "    77 |     7800 |  1.1943362999 |  1.1941895485\n",
+      "    78 |     7900 |  1.1943277180 |  1.1941895485\n",
+      "    79 |     8000 |  1.1943211347 |  1.1941895485\n",
+      "    80 |     8100 |  1.1943125182 |  1.1941895485\n",
+      "    81 |     8200 |  1.1943017727 |  1.1941895485\n",
+      "    82 |     8300 |  1.1942908764 |  1.1941895485\n",
+      "    83 |     8400 |  1.1942818034 |  1.1941895485\n",
+      "    84 |     8500 |  1.1942732042 |  1.1941895485\n",
+      "    85 |     8600 |  1.1942649573 |  1.1941895485\n",
+      "    86 |     8700 |  1.1942589825 |  1.1941895485\n",
+      "    87 |     8800 |  1.1942533535 |  1.1941895485\n",
+      "    88 |     8900 |  1.1942466813 |  1.1941895485\n",
+      "    89 |     9000 |  1.1942425853 |  1.1941895485\n",
+      "    90 |     9100 |  1.1942388666 |  1.1941895485\n",
+      "    91 |     9200 |  1.1942349082 |  1.1941895485\n",
+      "    92 |     9300 |  1.1942316848 |  1.1941895485\n",
+      "    93 |     9400 |  1.1942268521 |  1.1941895485\n",
+      "    94 |     9500 |  1.1942228895 |  1.1941895485\n",
+      "    95 |     9600 |  1.1942171645 |  1.1941895485\n",
+      "    96 |     9700 |  1.1942116839 |  1.1941895485\n",
+      "    97 |     9800 |  1.1942096853 |  1.1941895485\n",
+      "    98 |     9900 |  1.1942066622 |  1.1941895485\n",
+      "    99 |    10000 |  1.1942056006 |  1.1941895485\n",
+      "   100 |    10100 |  1.1942042583 |  1.1941895485\n"
      ]
     }
    ],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -400,8 +400,8 @@
      "output_type": "stream",
      "text": [
       "Optimum parameters (active el len, parasitic as fraction of active el, spacing:\n",
-      " [20.4432623   0.88392117  0.9451386 ]\n",
-      "Objective = max VSWR within band:  1.194239616394043\n",
+      " [20.44303938  0.88388413  0.95303555]\n",
+      "Objective = max VSWR within band:  1.1941895484924316\n",
       "Matching sections (degrees): [z0a, z0b] [180.  91.]\n"
      ]
     }
@@ -440,6 +440,50 @@
     "What are we to make of this?\n",
     "\n",
     "Continued in next notebook...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.445151878961305"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Results from a few runs...\n",
+    "# [20.4432623   0.88392117  0.9451386 ]   [180.  91.]   1.194239616394043\n",
+    "# [20.43877085  0.88388276  0.9754141 ]   [179.  93.]   1.1947894096374512\n",
+    "# [20.44113615  0.88367977  0.99880145]   [180.  91.]   1.1946964263916016\n",
+    "# [20.44303938  0.88388413  0.95303555]   [180.  91.]   1.1941895484924316"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.208232354074074"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "299.792458 / 3.75 / 360.0 * 91"
    ]
   },
   {
