--- a/Wire Antennas/054_Open_Sleeve_Dipole_2.ipynb
+++ b/Wire Antennas/054_Open_Sleeve_Dipole_2.ipynb
@@ -208,6 +208,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NEC5 Segmentation Issues?\n",
+    "The authors of the Smith/Conboy paper mention that it's important to model the antenna using the same number of segments in the parasitic element and in the parallel/adjacent portion of the driven element.<br>\n",
+    "Below is some code to test if this rule seems to apply, at least to this particular antenna simulated in NEC5:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Using the '3.4-4.1 MHz' version of the design in the previous section\n",
+    "# 'asegs', 'psegs' are the numbers of segements in the adjacent parallel sections of the elements\n",
+    "necstr_tl = \"\"\"CE Template\n",
+    "GW 1 {asegs} 0 0 24.4 0 17.921 24.4 0.000814\n",
+    "GW 1 2 0 17.921 24.4 0 20.696 24.4 0.000814\n",
+    "GW 1 {psegs} 0 0 24.780 0 17.921 24.780 0.000814\n",
+    "GW 20 1 0 0 2 0 0.001 2 0.001\n",
+    "GW 30 1 0 0 1 0 0.001 1 0.001\n",
+    "GX 100 010\n",
+    "GE 1 0\n",
+    "GD 0 0 0 0 13 0.005 0 0\n",
+    "TL 1 -1 20 -1 50 39.750 0 0 0 0\n",
+    "TL 20 -1 30 -1 75 19.764 0 0 0 0\n",
+    "EX 4 30 1 1 1.0 0.0\n",
+    "FR 0 101 0 0 3.4 0.007\n",
+    "XQ 0\n",
+    "EN\n",
+    "\"\"\"\n",
+    "# Our baseline: 10 segments in each of the parallel stretches of the two elements\n",
+    "res = nec5_sim_stdio3([necstr_tl.format(asegs=10, psegs=10)])\n",
+    "fs,base_zs = zip(*res[0][0][0])          # fs, zs are the freqs and feedpoint zs split into separate lists\n",
+    "\n",
+    "# With 10 segments in parallel section of active element,\n",
+    "#  compare with values of 6...25 segments for the opposing section of passive el\n",
+    "#  and compute the mean difference in the impedances (from the baseline of 10/10 segs)\n",
+    "import numpy as np\n",
+    "errors = []\n",
+    "zcurves = {}\n",
+    "asegs = 10\n",
+    "for psegs in range(6,26):\n",
+    "    res = nec5_sim_stdio3([necstr_tl.format(asegs=asegs, psegs=psegs)])\n",
+    "    _,zs = zip(*res[0][0][0])\n",
+    "    mae = np.mean(np.abs(np.array(zs) - np.array(base_zs)))     # Mean absolute error\n",
+    "    errors.append([asegs,psegs,mae])\n",
+    "    zcurves[psegs] = zs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10.        , 10.        ,  0.        ],\n",
+       "       [10.        , 11.        ,  0.32454202],\n",
+       "       [10.        ,  9.        ,  0.46931238],\n",
+       "       [10.        , 12.        ,  0.57281769],\n",
+       "       [10.        , 13.        ,  0.77316701],\n",
+       "       [10.        , 14.        ,  0.939304  ],\n",
+       "       [10.        ,  8.        ,  1.00018795],\n",
+       "       [10.        , 15.        ,  1.0792597 ],\n",
+       "       [10.        , 16.        ,  1.19975871],\n",
+       "       [10.        , 17.        ,  1.30492995],\n",
+       "       [10.        , 18.        ,  1.39708944],\n",
+       "       [10.        , 19.        ,  1.47816764],\n",
+       "       [10.        , 20.        ,  1.55305905],\n",
+       "       [10.        , 21.        ,  1.61975927],\n",
+       "       [10.        , 22.        ,  1.67631012],\n",
+       "       [10.        ,  7.        ,  1.70505724],\n",
+       "       [10.        , 23.        ,  1.72778843],\n",
+       "       [10.        , 24.        ,  1.77471947],\n",
+       "       [10.        , 25.        ,  1.81753345],\n",
+       "       [10.        ,  6.        ,  2.6939465 ]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort, print worst-case errors\n",
+    "errs = np.array(errors)\n",
+    "errs =errs[np.argsort(errs[:, 2])]      # Sort by error\n",
+    "errs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion:<br>\n",
+    "At least in this example, there doesn't seem to be much need for concern about matching the number of segments in the parallel wire sections -- roughly similar values produce about the same results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
