--- a/Yagi Design/011_Yagi_Class_Part_2.ipynb
+++ b/Yagi Design/011_Yagi_Class_Part_2.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Class for Representing Yagis and Other Antennas: Part 2, Examples"
+    "# A Class for Representing Yagis and Other Antennas:<br>Part 2, Example"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "\n",
     "# ...and run the simulation\n",
     "result = nec5_sim_stdio3([nec_deck])\n",
-    "rad_pat = result[0][1][0][0][1]                 # Extract just the radiatuion pattern array\n",
+    "rad_pat = result[0][1][0][0][1]                 # Extract just the radiation pattern array\n",
     "plot_elevation([rad_pat], tags=['3el'])\n",
     "plot_azimuth(rad_pat, [7])\n",
     "             "
@@ -4052,7 +4052,8 @@
     }
    ],
    "source": [
-    "v = SolidObjVisualizer(x=(-10,10), y=(-10,10), z=(0,21))\n",
+    "# Create a visualizer widget and add your antenna object\n",
+    "v = SolidObjVisualizer(x=(-10,10), y=(-10,10), z=(0,21))        # Sets the limits of displayed volume\n",
     "v.add(three_el_yagi)\n",
     "v.show()"
    ]
