--- a/Yagi Design/012_Yagi_Class_Part_3.ipynb
+++ b/Yagi Design/012_Yagi_Class_Part_3.ipynb
@@ -37,13 +37,15 @@
     "# A Class for Representing Yagis and Other Antennas:<br>Part 3, Setting Properties\n",
     "\n",
     "You can define the geometry of your antenna by setting properties; here's a fuller discussion of the details.\n",
-    "\n",
+    "<br />\n",
+    "<br />\n",
     "\n",
     "The ```SolidAntenna``` class that you base your design on already has some default properties set; these are global properties that affect the overall antenna and all of its elements. As of this writing they look someting like:\n",
     "```python\n",
     "self.properties = {'tubing_dia':in2m([3/4, 5/8, 1/2]), 'section_lens':in2m([24,18]), \n",
     "                    'color':['lightblue','lightsteelblue','lightgray','whitesmoke'], 'nsides':9,\n",
-    "                    'boom':True, 'boomcolor':'steelblue', 'boomext':in2m(4), 'boomy':in2m(3), 'boomz':in2m(2),\n",
+    "                    'boom':True, 'boomcolor':'steelblue', \n",
+    "                    'boomext':in2m(4), 'boomy':in2m(3), 'boomz':in2m(2),\n",
     "                    'rotate':[], 'translate':(0,0,0)}\n",
     "```\n",
     "You can add or modify these when you create a new object:\n",
@@ -52,8 +54,20 @@
     "```\n",
     "or at any later time like this:\n",
     "```python\n",
-    "my_antenna.properties={'translate':(0,0,20), 'display_mirror':True, 'seg_per_m':5}, n_elem=3)\n",
+    "my_antenna.properties.update({'translate':(0,0,30)})\n",
     "```\n",
+    "<br />\n",
+    "<br />\n",
+    "\n",
+    "Each element also has local properties. The local properties will override global properties for a single element. You set them like this:\n",
+    "```python\n",
+    "my_antenna[0] = {'len':in2m(108.75)}        # Set the length for element '0'\n",
+    "```\n",
+    "Note that dimensions are all in meters...in2m() is the inches --> meters conversion function.\n",
+    "<br />\n",
+    "<br />\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
