--- a/Yagi Design/012_Yagi_Class_Part_3.ipynb
+++ b/Yagi Design/012_Yagi_Class_Part_3.ipynb
@@ -67,8 +67,10 @@
     "<br />\n",
     "<br />\n",
     "\n",
+    "### Creating an Element\n",
     "\n",
     "\n",
+    "<img src=\"img/Element_Initial_Pos_2.svg\" alt=\"Drawing\" style=\"width: 500px;\"/>\n",
     "\n"
    ]
   },
@@ -77,7 +79,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "![Graph](img/Element_Initial_Pos_2.svg)"
+   ]
   }
  ],
  "metadata": {
