--- a/Yagi Design/012_Yagi_Class_Part_3.ipynb
+++ b/Yagi Design/012_Yagi_Class_Part_3.ipynb
@@ -4067,6 +4067,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br /><br />\n",
+    "### Property Summary\n",
+    "<br /><br />\n",
+    "| One thing | Another |\n",
+    "| One thing | Another |\n",
+    "| One thing | Another |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
