--- a/Yagi Design/012_Yagi_Class_Part_3.ipynb
+++ b/Yagi Design/012_Yagi_Class_Part_3.ipynb
@@ -4073,9 +4073,20 @@
     "<br /><br />\n",
     "### Property Summary\n",
     "<br /><br />\n",
-    "| One thing | Another |\n",
-    "| One thing | Another |\n",
-    "| One thing | Another |"
+    "| Property | |\n",
+    "| ----- | ----- |\n",
+    "| tubing_dia | Diameters of tubing sections:  ```'tubing_dia':in2m([1, 7/8, 3/4, 5/8])``` |\n",
+    "| display_dia | Optionally specify different diameters for displayed tubing |\n",
+    "| section_lens | Fixed lengths of inner tubing sections: ```'section_lens':in2m([24,18])``` |\n",
+    "| color | Display color for sections (standard CSS color names): <br />```'color':'blue'``` or ```'color':['lightblue','lightsteelblue','lightgray','whitesmoke']```|\n",
+    "| nsides | Number of sides used in polygonal approximation of circular tubing in displayed model|\n",
+    "| | |\n",
+    "| boom | True = creates a nonfunctional rectangular boom for Yagi in displayed model|\n",
+    "| boom_ext | Distance boom extends beyond first, last elements|\n",
+    "| boomy, boomz | Boom cross-section dimensions|\n",
+    "| boomcolor | Boom display color:  ```'boomcolor':'steelblue'```|\n",
+    "\n",
+    "\n"
    ]
   },
   {
