--- a/Yagi Design/012_Yagi_Class_Part_3.ipynb
+++ b/Yagi Design/012_Yagi_Class_Part_3.ipynb
@@ -4086,6 +4086,25 @@
     "| boom_ext | Distance boom extends beyond first, last elements|\n",
     "| boomy, boomz | Boom cross-section dimensions|\n",
     "| boomcolor | Boom display color:  ```'boomcolor':'steelblue'```|\n",
+    "| | |\n",
+    "| rotate | List of rotations (degrees), performed in order:  ```'rotate':[('x',90),('y',-10),('z',-45)]```|\n",
+    "| translate | Move elements(s):  ```'translate':(x,y,z)```|\n",
+    "| | |\n",
+    "| len | Overall element length = variable outer section + fixed-length inner sections|\n",
+    "| tag | Integer tag used by NEC; default = 1 for element[0], etc.|\n",
+    "| driven | Identify the driven element; default = element[1]|\n",
+    "| | |\n",
+    "| segnums | Number of NEC segments for each section: ```'segnums':[10,8,12]```|\n",
+    "| seg_per_m | Alternately, specify segments per meter of section length: ```'seg_per_m':5```|\n",
+    "| | |\n",
+    "| text | Text displayed when mouse cursor hovers: ```'text':'Reflector'```|\n",
+    "| suffix | Optional suffix when hovering over element section: ```'suffix':['7/8', '3/4', '5/8']```|\n",
+    "| | |\n",
+    "| nec_mirror | Generate ```GW``` cards in NEC output for mirrored elements  ```'nec_mirror':True```|\n",
+    "| display_mirror | Display mirrored elements  ```'display_mirror':True```|\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
